Changed app structure to be cleaner

--- a/app.yaml
+++ b/app.yaml
@@ -7,7 +7,7 @@ threadsafe: yes
 handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
-  upload: favicon\.ico
+  upload: /favicon\.ico
 
 - url: /css
   static_dir: css
